cambiando imagen y borrando archivos innecesarios

--- a/01/index.html
+++ b/01/index.html
@@ -18,8 +18,8 @@
 <aside>que coños</aside>
 <section>define secciones</section>
 <article>mi nombre es frailejon</article>
-<img src="cedula 1.jpg" alt="hello">
-<figure><img src="cedula 1.jpg" alt=""></figure>
+<img src="escher.jpg" alt="hello">
+<figure><img src="escher.jpg" alt=""></figure>
 <figcaption>cedula de laura</figcaption>
 <ul>
     <li>papas</li>
