mejorando contenido de etiquetas

--- a/01/index.html
+++ b/01/index.html
@@ -14,13 +14,13 @@
 <div>alo?</div>
 <span>aloha</span>
 <nav>aja</nav>
-<main>que putas</main>
-<aside>que coños</aside>
+<main>probando</main>
+<aside>con sueño pero pasion</aside>
 <section>define secciones</section>
 <article>mi nombre es frailejon</article>
 <img src="escher.jpg" alt="hello">
 <figure><img src="escher.jpg" alt=""></figure>
-<figcaption>cedula de laura</figcaption>
+<figcaption>escher</figcaption>
 <ul>
     <li>papas</li>
     <li>pereza</li>
