--- a/01/index.html
+++ b/01/index.html
@@ -32,8 +32,9 @@
 <thead>gripa</thead>
 <tbody>mocos</tbody>
 <tfoot>sueño</tfoot>
-<input type="text" name="joder" id="">br
-<input type="date" name="" id=""><br>
+<br><input type="text" name="nombre" id="name">br
+<input type="date" name="fecha" id=""><br>
 <textarea name="" id="" cols="30" rows="10"></textarea>
 <input type="checkbox" name="" id="">
 <input type="radio" name="" id="">
+<button type="submit">enviar</button>
