--- a/02/index.html
+++ b/02/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ejercicio con estilos</title>
 </head>
+<link rel="stylesheet" href="main.css">
 <body>
-    <img src="logo_inverfor (1).png" alt="logo">
-    <h5>Atencion 24 horas</h5>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis reprehenderit similique quidem quos ipsum eveniet tenetur et voluptates quibusdam. Eveniet soluta exercitationem unde totam quisquam! Consequatur placeat incidunt culpa iste.
+    <img src="logo_inverfor (1).png" alt="Logo">
+<nav>
+    <header class="styleHead">
+   <a href="1" class="menus">INICIO</a><a href="2" class="menus">QUIENES SOMOS</a><a href="3" class="menus">PROYECTOS</a><a href="4" class="menus">SERVICIOS</a><a href="5" class="menus">CONTACTO</a>
+    </header>
+</nav>
+    <img src="encabezado.jpg" alt="encabezado">
+    <br> <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, dolorum cupiditate quidem consectetur ipsa temporibus omnis voluptas eos sequi maxime aliquid quisquam mollitia quia dignissimos, incidunt itaque doloribus! Nobis, quo?
+    </span> 
+<hr><h2>Servicios de automatizacion</h2>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <div></div>
+    Vel earum animi cupiditate maxime! Soluta cum, alias iusto nobis dolor <div></div>
+    praesentium dolorem consequatur fugiat? Magnam neque modi omnis <div></div>
+    saepe harum minima.</p>
+    <Form>
+       <input type="text" name="nombre" id="">
+    </Form>
 </body>
 </html>
