--- a/03/index.html
+++ b/03/index.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
         <header class="styleHead">
-            <a href="1" class="menus">INICIO</a><a href="2" class="menus">QUIENES SOMOS</a><a href="3" class="menus">PROYECTOS</a><a href="4" class="menus">SERVICIOS</a><a href="5" class="menus">CONTACTO</a>
+            <a href="1" class="menus">INICIO</a><a href="2" class="menus">QUIENES SOMOS</a><a href="quienes somos/indexquienessomos.html" class="menus">PROYECTOS</a><a href="4" class="menus">SERVICIOS</a><a href="5" class="menus">CONTACTO</a>
         </header>
     </nav>
     <div class="imagen1">
