agregando pie de pagina

--- a/03/quienes-somos/indexquienessomos.html
+++ b/03/quienes-somos/indexquienessomos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes somos</title>
     <link rel="stylesheet" href="quienessomos.css">
+    <link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
 </head>
 <body>
     <h3>QUIENES SOMOS</h3>
@@ -16,7 +17,7 @@
             </p>
         </div>
         <div class="section2">
-            <img class="imagenelectronica"style="width:50%; height:100%; float:left;" src="IMAGEN ELEC.jpg" alt="electronica">
+            <img class="imagenelectronica"style="width:50%; height:100%; float:left;" src="./IMAGEN-ELEC.jpg" alt="electronica">
         </div>
     </div>
     <h3>VENTAJAS</h3>
@@ -38,6 +39,13 @@
     </div>
     <br>
     <div style="width:100%; height: 200px; display: flex; justify-content: center;">
+    </div>
+    <hr class="Lineadiv">
+    <div class="head1">
+        <img class="logo" src="logo_inverfor(1).png" alt="Logo">
+        <h4 class="headinfo">Atencion 24 horas</h4>
+        <p class="iconotelefono oi oi-phone"></p>
+        <h4>315 3305000</h4>
     </div>
 </body>
 </html>
