--- a/03/quienes-somos/indexquienessomos.html
+++ b/03/quienes-somos/indexquienessomos.html
@@ -17,7 +17,7 @@
             </p>
         </div>
         <div class="section2">
-            <img class="imagenelectronica"style="width:50%; height:100%; float:left;" src="./IMAGEN-ELEC.jpg" alt="electronica">
+            <img class="imagenelectronica" src="./IMAGEN-ELEC.jpg" alt="electronica">
         </div>
     </div>
     <h3>VENTAJAS</h3>
@@ -37,7 +37,28 @@
             </div>
         </div>
     </div>
-    <br>
+    <h3>MISION</h3>
+    <div class="head2" style=" width: 100%; height: 300px;">
+        <div class=section4 style="height:100%; width: 50%;float: left;display: flex;justify-content: center;">
+            <img style=width:500px; height="300px" src="./company-mision.jpg" alt="mision">
+        </div>
+    <div class="section5" style="height: 100%;width: 50%;float: left;display: flex; align-items: center;">
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum atque dolorum eius iusto id enim voluptate repellendus dolor culpa, doloremque, ex suscipit quis modi earum quibusdam nostrum mollitia eos consectetur?
+        </p>
+    </div>
+    </div>
+    <h3>VISION</h3>
+    <div class="head3" style=" width: 100%; height: 300px;">
+        <div class=section6 style="height:100%; width: 50%;float: left;display: flex;align-items: center;">
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum atque dolorum eius iusto id enim voluptate repellendus dolor culpa, doloremque, ex suscipit quis modi earum quibusdam nostrum mollitia eos consectetur?
+            </p>   
+        </div>
+    <div class="section7" style="height: 100%;width: 50%;float: left;display: flex; justify-content: center;">
+        <img style=width:500px; height="300px" src="./company-vision.jpg" alt="mision">
+    </div>
+    </div>
     <div style="width:100%; height: 200px; display: flex; justify-content: center;">
     </div>
     <hr class="Lineadiv">
