--- a/03/quienes-somos/indexquienessomos.html
+++ b/03/quienes-somos/indexquienessomos.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <h3>MISION</h3>
-    <div class="head2" style=" width: 100%; height: 300px;">
+    <div class="head2">
         <div class=section4 style="height:100%; width: 50%;float: left;display: flex;justify-content: center;">
             <img style=width:500px; height="300px" src="./company-mision.jpg" alt="mision">
         </div>
@@ -49,13 +49,13 @@
     </div>
     </div>
     <h3>VISION</h3>
-    <div class="head3" style=" width: 100%; height: 300px;">
-        <div class=section6 style="height:100%; width: 50%;float: left;display: flex;align-items: center;">
+    <div class="head3">
+        <div class="section6">
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum atque dolorum eius iusto id enim voluptate repellendus dolor culpa, doloremque, ex suscipit quis modi earum quibusdam nostrum mollitia eos consectetur?
             </p>   
         </div>
-    <div class="section7" style="height: 100%;width: 50%;float: left;display: flex; justify-content: center;">
+    <div class="section7">
         <img style=width:500px; height="300px" src="./company-vision.jpg" alt="mision">
     </div>
     </div>
