modificacion estilo section4 y 5

--- a/03/quienes-somos/indexquienessomos.html
+++ b/03/quienes-somos/indexquienessomos.html
@@ -39,10 +39,10 @@
     </div>
     <h3>MISION</h3>
     <div class="head2">
-        <div class=section4 style="height:100%; width: 50%;float: left;display: flex;justify-content: center;">
+        <div class=section4>
             <img style=width:500px; height="300px" src="./company-mision.jpg" alt="mision">
         </div>
-    <div class="section5" style="height: 100%;width: 50%;float: left;display: flex; align-items: center;">
+    <div class="section5">
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum atque dolorum eius iusto id enim voluptate repellendus dolor culpa, doloremque, ex suscipit quis modi earum quibusdam nostrum mollitia eos consectetur?
         </p>
