Añadiendo el carrusel que casi me hace dar un paro por dios

--- a/03/proyectos/indexproyectos.html
+++ b/03/proyectos/indexproyectos.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="margin:0; width: 100%; height: 100%">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
+    <script src="proyectos.js"></script>
+    <link rel="stylesheet" href="proyectos.css ">
+    <link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
 </head>
 <body>
-    <h3 style="color: blue;text-align: center;">PROYECTOS</h3>
-    <img style= "width:30% ;height:30%;" src="./proyecto-acometida.jpg" alt="acometida">
-
+    <h3>PROYECTOS</h3>
+    <div class="carousel">
+        <div class="carousel__item carousel__item--selected">
+            <div style="height:100%; width:100%;">
+                <div style="width:50%; height:100%; float:left; display: flex; justify-content: center; align-items: center;">
+                    <div>
+                        Automatizacion de plantas industriales <img src="automatizacion.jpg" alt="item#1"class=uno>
+                    </div>
+                </div>
+                <div style="width:50%; height:100%; float:left; display: flex; justify-content: center; align-items: center;">
+                    <p style="width:85%; word-wrap: break-word;">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga doloribus, quos mollitia pariatur fugit voluptates culpa, corrupti natus eius hic sapiente nesciunt rerum. Eos qui magnam accusantium soluta nihil odio!
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="carousel__item">
+            <div style="height:100%; width:100%;">
+                <div style="width:50%; height:100%; float:left; display: flex; justify-content: center; align-items: center;">
+                    <div>
+                        Acometidas electricas <img src="proyecto-acometida.jpg" alt="item#1"class=dos>
+                    </div>
+                </div>
+                <div style="width:50%; height:100%; float:left; display: flex; justify-content: center; align-items: center;">
+                    <p style="width:85%; word-wrap: break-word;">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga doloribus, quos mollitia pariatur fugit voluptates culpa, corrupti natus eius hic sapiente nesciunt rerum. Eos qui magnam accusantium soluta nihil odio!
+                    </p>
+                </div>
+            </div>    
+        </div>
+        <div class="carousel__item">
+            <div style="height:100%; width:100%;">
+                <div style="width:50%; height:100%; float:left; display: flex; justify-content: center; align-items: center;">
+                    <div>
+                        Diagnostico de redes <img src="diagnostico de redes.jpg" alt="item#1"class=tres>
+                    </div>
+                </div>
+                <div style="width:50%; height:100%; float:left; display: flex; justify-content: center; align-items: center;">
+                    <p style="width:85%; word-wrap: break-word;">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga doloribus, quos mollitia pariatur fugit voluptates culpa, corrupti natus eius hic sapiente nesciunt rerum. Eos qui magnam accusantium soluta nihil odio!
+                    </p>
+                </div>
+            </div> 
+        </div>   
+        <div class="carousel__nav">
+            <span class="carousel__button"></span>
+            <span class="carousel__button carousel__button--selected"></span>
+            <psan class="carousel__button"></span>
+        </div>
+    </div>
+    <div style="width:100%; height: 200px; display: flex; justify-content: center;">
+    </div>
     <hr class="Lineadiv">
     <div class="head1">
         <img class="logo" src="logo_inverfor(1).png" alt="Logo">
