--- a/03/index.html
+++ b/03/index.html
@@ -19,7 +19,7 @@
         <header class="styleHead">
             <a href="1" class="menus">INICIO</a>
             <a href="./quienes-somos/indexquienessomos.html" class="menus">QUIENES SOMOS</a>
-            <a href="3" class="menus">PROYECTOS</a>
+            <a href="./proyectos/indexproyectos.html" class="menus">PROYECTOS</a>
             <a href="4" class="menus">SERVICIOS</a>
             <a href="5" class="menus">CONTACTO</a>
         </header>
