--- a/03/index.html
+++ b/03/index.html
@@ -17,11 +17,10 @@
     </div>
     <nav>
         <header class="styleHead">
-            <a href="1" class="menus">INICIO</a>
             <a href="./quienes-somos/indexquienessomos.html" class="menus">QUIENES SOMOS</a>
             <a href="./proyectos/indexproyectos.html" class="menus">PROYECTOS</a>
             <a href="./servicios/indexservicios.html" class="menus">SERVICIOS</a>
-            <a href="5" class="menus">CONTACTO</a>
+            <a href="./contacto/contacto.html" class="menus">CONTACTO</a>
         </header>
     </nav>
     <div class="imagen1">
