--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/estilos.css">
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Pagina publica</title>
 </head>
 <body>
@@ -21,22 +21,43 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">INICIO <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">QUIENES SOMOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">PROYECTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">SERVICIOS</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                PROVEEDORES
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Condiciones</a>
+                <a class="dropdown-item" href="#">Registro</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Preguntas Frecuentes</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                EMPLEADOS
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Registro</a>
+                <a class="dropdown-item" href="#">Inicie Sesion</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Preguntas Frecuentes</a>
+              </div>
             </li>
           </ul>
-          <span class="navbar-text">
-            Navbar text with an inline element
-          </span>
         </div>
       </nav>
+      <div style="width:100%; display: flex; justify-content: center;">
+        <img src="./frontpage-automatization.jpg" alt="">
+      </div>
 </body>
-      
     </header>
     <section></section>
     <footer></footer>
